# Cpp-Development-Foundation

./: .gitignore
Black/Nucleotide/: CMakeLists.txt  nucleotide.h  nucleotide_test.cpp
Black/banned-domains-san/: CMakeLists.txt  main.cpp
Black/json-printer/: CMakeLists.txt  main.cpp
Black/mython-lexer/: CMakeLists.txt  lexer.cpp  lexer.h  lexer_test.cpp  test_runner.h
Black/personal-budget-san/: CMakeLists.txt  main.cpp
Black/phone-book/: CMakeLists.txt  contact.proto  main.cpp  phone_book.cpp  phone_book.h
Black/save-load/: CMakeLists.txt  main.cpp  saveload.h
Black/sum-without-overflow/: main.cpp
Black/sum-without-owerflow/: CMakeLists.txt  main.cpp
Black/transport-directory-I/: descriptions.cpp  render.cpp
Black/transport-directory-f/: CMakeLists.txt  svg.h
Black/transport-directory-g/: CMakeLists.txt  expected1.json  input2.json  json.cpp  main.cpp  render.cpp  render.h  requests.cpp  requests.h  svg.cpp  svg.h  transport_catalog.h
Black/transport-directory-h/: CMakeLists.txt  descriptions.cpp  expected1.json  input2.json  json.h  render.cpp  render.h  svg.cpp
Black/transport-directory-i/: CMakeLists.txt  descriptions.h  expected1.json  input1.json  render.h  requests.h  svg.cpp
Black/transport-directory-j/: CMakeLists.txt  expected1.json  expected2.json  json.cpp  main.cpp  map_renderer.cpp  map_renderer.h  requests.cpp  requests.h  svg.cpp  svg.h  transport_catalog.cpp  transport_catalog.h
Black/transport-directory-san/: CMakeLists.txt  graph.h  main.cpp  router.h  transport_router.cpp  transport_router.h
Black/yellow-pages/: CMakeLists.txt  merge.cpp  test.cpp
Brown/banned-domains/: CMakeLists.txt  main.cpp
Brown/banned-domains-tests/: CMakeLists.txt  main.cpp
Brown/booking-raii/: CMakeLists.txt  booking.h  main.cpp
Brown/cache/: CMakeLists.txt  Common.h  Solution.cpp  main.cpp
Brown/comment-server/: CMakeLists.txt  main.cpp
Brown/concurrent-map-2/: CMakeLists.txt  main.cpp
Brown/demographic-indicators/: CMakeLists.txt  main.cpp
Brown/demographic-indicators-2/: CMakeLists.txt  main.cpp
Brown/demographic-indicators-3/: CMakeLists.txt  bug1_bad.cpp  bug2_bad.cpp  bug3_bad.cpp  bug4_bad.cpp  bug5_bad.cpp  bug6_bad.cpp  main.cpp
Brown/ebook-2/: CMakeLists.txt  main.cpp
Brown/express-2/: CMakeLists.txt  main.cpp
Brown/expression-tree/: CMakeLists.txt  main.cpp
Brown/game-object-collide/: CMakeLists.txt  game_object.h  geo2d.cpp  geo2d.h  main.cpp
Brown/hash-table/: CMakeLists.txt  main.cpp
Brown/lazy-value/: CMakeLists.txt  main.cpp
Brown/load-from-ini/: CMakeLists.txt  ini.cpp  ini.h  main.cpp
Brown/load-from-json/: CMakeLists.txt  main.cpp
Brown/load-from-xml/: CMakeLists.txt  main.cpp  xml.h
Brown/person-hasher/: CMakeLists.txt  main.cpp
Brown/personal-budget-home-desktop/: CMakeLists.txt  main.cpp
Brown/personal-budget-legacy-mobile/: CMakeLists.txt  main.cpp
Brown/personal-budget-professional-desktop/: CMakeLists.txt
Brown/personal-budget-professional-desktop-version/: main.cpp
Brown/personal-budget-professional-mobile/: CMakeLists.txt  main.cpp
Brown/pipeline/: CMakeLists.txt  main.cpp
Brown/point-hasher/: CMakeLists.txt  main.cpp
Brown/polynomial/: CMakeLists.txt  main.cpp
Brown/refactoring/: CMakeLists.txt  json.cpp  json.h  main.cpp  xml.cpp  xml.h
Brown/secondary-index/: CMakeLists.txt  main.cpp
Brown/set-iterator-increment/: CMakeLists.txt  main.cpp
Brown/stats-aggregator/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
Brown/synchronized-2/: CMakeLists.txt  main.cpp
Brown/task-tracker-2/: CMakeLists.txt  main.cpp
Brown/textures/: CMakeLists.txt  Solution.cpp
Brown/transport-directory-a/: CMakeLists.txt  main.cpp
Brown/transport-directory-b/: CMakeLists.txt  main.cpp
Brown/transport-directory-c/: CMakeLists.txt  main.cpp
Brown/transport-directory-d/: CMakeLists.txt  bus.h  json.cpp  json.h  main.cpp  manager.h  stop.h
Brown/transport-directory-e/: CMakeLists.txt  bus.h  guide.h  input.json  json.cpp  json.h  main.cpp  path.h  (+3 more)
White/: flname1.cpp  flname2.cpp  flname3.cpp  rational1.cpp  rational2.cpp  rational3.cpp  rational4.cpp  rational5.cpp  rational6.cpp  rational_calc.cpp  reverse_function_1.cpp  reverse_function_2.cpp
dev-lib/: test_runner.h
test-lib/: test_runner.h
(+123 files in other folders)
